Rework the DealerInfo class to improve robustness.

This may be overkill, but it makes the DealerInfo class much easier to
use. Translation duties have been moved inside the class to ensure the
developer gets a translated string unless he explicitly requests the
untranslated bytes. The base ID and the subtype IDs are handled
separately inside the class and there are explicit getters for each.

BUG:252586

svn path=/trunk/KDE/kdegames/kpat/; revision=1193161